--- a/frontend/src/components/Footer/Footer.scss
+++ b/frontend/src/components/Footer/Footer.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: center;
     height: 300px;
-    background: #CECECE;
+    background: #D9D9D9;
     gap: 4rem;
 
     .container_conteudo_footer {
