--- a/frontend/src/components/Input/InputPesquisa.scss
+++ b/frontend/src/components/Input/InputPesquisa.scss
@@ -15,13 +15,13 @@
         outline: none;
         height: 60px;
         max-width: 800px;
-        background: #CECECE;
+        background: #D9D9D9;
         font-size: 25px;
         font-weight: bold;
         padding: .7rem;
     }
 
     input::placeholder {
-        color: #4f4f4f;
+        color: #7C7C7C;
     }
 }
