--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,3 +4,12 @@
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+a {
+    color: black;
+    transition: 0.1s;
+}
+
+a:hover {
+    font-size: 17px;
+}
